# ChangeLog for media-video/vdr
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/vdr/ChangeLog,v 1.183 2014/10/01 16:02:21 hd_brummy Exp $

*vdr-2.0.6-r1 (01 Oct 2014)

  01 Oct 2014; Joerg Bornkessel <hd_brummy@gentoo.org> -vdr-2.0.6.ebuild,
  +vdr-2.0.6-r1.ebuild:
  naludump patch fixed, reported by M.Dummer

  27 Sep 2014; Joerg Bornkessel <hd_brummy@gentoo.org> vdr-2.0.6.ebuild:
  fixed typo in patchset

*vdr-2.0.6 (26 Sep 2014)

  26 Sep 2014; Joerg Bornkessel <hd_brummy@gentoo.org> +vdr-2.0.6.ebuild,
  +files/vdr-2.0.6_gentoo.patch, metadata.xml:
  bump; removed use-flag setup depends; extended patchset for vdr-permashift-1;
  wrt bug 521570; wrt bug 499444

  15 Jun 2014; Joerg Bornkessel <hd_brummy@gentoo.org> -vdr-1.6.0_p2-r7.ebuild,
  -vdr-1.6.0_p2-r11.ebuild, -files/vdr-1.6.0-extensions-72-gcc-4.4.diff,
  -files/vdr-1.6.0-gcc-4.4.diff, -files/vdr-1.6.0-ldflags.patch,
  -files/vdr-1.6.0-makefile-install-header.diff,
  -files/vdr-1.6.0-shared-tinyxml.diff, -files/vdr-1.6.0-use-v4l2.patch,
  -files/vdr-1.6.0_p2_fontconfig_fontsort.patch,
  -files/vdr-1.6.0_p2_gcc-4.7.patch, -files/vdr-1.6.0_p2_linguas-v3.diff,
  -files/vdr-dvb-api-5-is-fine.diff, metadata.xml:
  cleanup old

*vdr-2.0.5 (20 Jan 2014)

  20 Jan 2014; Joerg Bornkessel <hd_brummy@gentoo.org> +vdr-2.0.5.ebuild:
  bump; use-flag setup and depended plugin vdr-setup will be removed in the
  future, use as equivalent plugin vdr-menuorg

  02 Jan 2014; Joerg Bornkessel <hd_brummy@gentoo.org> -vdr-2.0.2-r1.ebuild,
  -vdr-2.0.3.ebuild, vdr-2.0.4.ebuild:
  stable amd64 x86; cleanup

*vdr-2.0.4 (26 Oct 2013)

  26 Oct 2013; Joerg Bornkessel <hd_brummy@gentoo.org> +vdr-2.0.4.ebuild:
  bump, bug fixes; removed unused use-flag dxr3

*vdr-2.0.3 (01 Sep 2013)

  01 Sep 2013; Joerg Bornkessel <hd_brummy@gentoo.org> +vdr-2.0.3.ebuild:
  bump

  07 Jul 2013; Joerg Bornkessel <hd_brummy@gentoo.org> -vdr-2.0.1-r1.ebuild,