@@ -13,13 +13,12 @@ DIST vdr-2.0.6.tar.bz2 839575 SHA256 c33c6431726378d5af575d8cfcacd34a50d17334e09
 EBUILD vdr-2.0.4.ebuild 10155 SHA256 0f42b7af9fb0f1c7f0a4fe1d368108e0590f714d552d0af2aa17c0387a7e66e0 SHA512 056078c372f8070d90d2133f159a8663ea05bedcd0db4d024d483c98979cec5e784fbece6fa78ac19c3e56021812fbdd8c91c6e0ed1fe92df738f8595f955554 WHIRLPOOL fc6132e5fdec6e572a7a5bece5d9505ca06d38fe569fa4814e3e9d5dca53323b3d21f0246baaa8348d554135721ea7c0805070d33230138f305605a9231d9fda
 EBUILD vdr-2.0.5.ebuild 10427 SHA256 7d5a2e57aad2313fb98b05969a6db2d9dc3ec50f0a1b2ce1c24a3ae670eff962 SHA512 d0c15555dee7aef96bc67a2690dd8cbc9efc0770388551c027bc97d9426874beb711c088d9f9185545bf91d3ae39825ce6ada32f0d4b6bcfdb9b34a1a5ce9ba6 WHIRLPOOL 42df21f8f8c1466b6e404ac3423e8223c25df848d5c9b7e8b9e772bc9720dbd28d76ab7da07f352206ca020de6a5903bf3aae9edbfdd4adca7b0e251fcf4edea
 EBUILD vdr-2.0.6-r1.ebuild 7043 SHA256 11be3ae16c1233f36f454625dae18ae7b912cbcd50bff9b812563bd7662475ff SHA512 d43519ee14bf3dd7ecd004b65687dc75096f99f3f77f53c53ec34cf9e0ea2ae73a2f43779388da36f32f7e17bdb873f1197c315eeeea8e8499d8d0f23b649879 WHIRLPOOL 598f01ff8fcc0f20364a674cb3369edca78b64ccecf52e7374c21c492776b3354b674eb90ac83c8ef9883d4d847117e669128057384eb96e8d6d7637f29f63a7
-MISC ChangeLog 33624 SHA256 46baddc560fbb3f1917b11f23c112102df6b1c1490d28dcf79e8078ebd84a7ae SHA512 1a8cafb1c6e251692c365bc363d7c7cec69a1791a9959cf5c6d1c265ca5f93eb71e2210f779b881bc9133ee8a535f72c172afab1046d660240f56138e2401627 WHIRLPOOL 5d79a45b04d6aea657ec1450931e1df01d3498acff6a848a50d28eb507b35bec582bd132b9aa8a6c14179a5f97fafadbefb261641da5b0d1fb471513e8290c4f
-MISC metadata.xml 1935 SHA256 edf53314a4bca198c52f8f11057f17e45c171c4fd0b9a8d2a19a5d441ca9a929 SHA512 6e1c0ec736c11a0e9b0921bdef114e0a315abe5badf8a40e160b80f6a86c9571f0549844b052cd25435fc1dfc96cd07ec37497c9a44eaaa0c543da04bc7a5139 WHIRLPOOL 49fdefa665e26cbed9fdd953c8c419a61baac1faf738297d79817bebda0a54d552bca146cc933076654fbb78574c09dd790c8aedc2367089792ae61ec2f8d03a
+MISC ChangeLog 33704 SHA256 c9e7271fa98fac4262d65f4ed89378db7bc3f5715cbcc16e9361b042ca692abf SHA512 e85bb98c6e897fc9e8bea192b9774b781a192d74dc54f70949d3007957c51bc4320074bcc33538f1090be5a147b51c64d1319ed32cfd5e7891e85a1eec67fa41 WHIRLPOOL f3b3b825c2b7bbae3d4ea9a5f4bd3e03778a4fdba2ab036cbf6bd3a51a6abecfe69a6f9927866efe88067566918ae2183bc0081a983292ba7ae9bc6e6c103d4c
+MISC metadata.xml 1903 SHA256 67ce8ca779246b6ed429cbe57b1e2958ba6c77b9bf10ee84a3d1c3757920e858 SHA512 9c4a995e63b07f0970ced63798cd813009e961eb85419c441dc75e242dd81f041aba650a5c2d01991dd7bbc678964f4cd94f6f551678b66850754e5df37ba826 WHIRLPOOL 20311208a56f5adde18ac157aa61c8a0cfcc10d31cf90590d8ebdca0db8b737bbdc41e4bdbe21f139e9ec15cd1d95f7617194884c99d1ba9f13f3868fe8d4531
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
-Comment: added by hd_brummy@gentoo.org
+Version: GnuPG v2
 
-iD8DBQFULCWUdn07HTTCgIoRCFF0AKC0+pd5Mw4Dn5FM/3KcuxqoHS6/qACgmrGd
-5ywRUHZu/rTeDjIauTKYs3E=
-=efs6
+iEYEAREIAAYFAlR0+EwACgkQVWmRsqeSphMJXwCfQdDe+dKjaSIFDmHzNZwUF1/4
+nQ4An3QyrFOH+TGdd3yo8d+sLPbZlJsd
+=dTzq
 -----END PGP SIGNATURE-----
