@@ -2,7 +2,6 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>media-tv</herd>
-	<herd>proxy-maintainers</herd>
 	<maintainer>
 		<email>vdr@gentoo.org</email>
 		<name>Gentoo VDR Project</name>
