@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile configure install postinst prerm setup test unpack
+DEPEND=amd64? ( abi_x86_32? ( !abi_x86_64? ( www-plugins/nspluginwrapper ) ) ) app-arch/unzip
+DESCRIPTION=Adobe Flash Player
+EAPI=5
+HOMEPAGE=http://www.adobe.com/products/flashplayer.html http://get.adobe.com/flashplayer/
+IUSE=debug kde selinux sse2 abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 abi_ppc_32 abi_ppc_64 abi_s390_32 abi_s390_64
+KEYWORDS=-* ~amd64 ~x86
+LICENSE=AdobeFlash-11.x
+RDEPEND=amd64? ( abi_x86_32? ( !abi_x86_64? ( www-plugins/nspluginwrapper ) ) ) abi_x86_64? ( dev-libs/atk dev-libs/glib:2 dev-libs/nspr dev-libs/nss kde? ( dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtsvg:4 kde-base/kdelibs x11-libs/libICE x11-libs/libSM x11-libs/libXau x11-libs/libXdmcp x11-libs/libXext x11-libs/libXft x11-libs/libXpm ) media-libs/fontconfig media-libs/freetype >=sys-libs/glibc-2.4 x11-libs/cairo x11-libs/gdk-pixbuf x11-libs/gtk+:2 x11-libs/libX11 x11-libs/libXcursor x11-libs/libXext x11-libs/libXrender x11-libs/libXt x11-libs/pango ) abi_x86_32? ( amd64? ( || ( ( >=dev-libs/atk-2.10.0[abi_x86_32(-)] >=x11-libs/cairo-1.12.14-r4[abi_x86_32(-)] >=x11-libs/gdk-pixbuf-2.30.7[abi_x86_32(-)] >=x11-libs/gtk+-2.24.23:2[abi_x86_32(-)] >=x11-libs/pango-1.36.3[abi_x86_32(-)] ) app-emulation/emul-linux-x86-gtklibs[-abi_x86_32(-)] ) || ( ( >=dev-libs/glib-2.34.3:2[abi_x86_32(-)] >=dev-libs/nspr-4.10.4[abi_x86_32(-)] >=dev-libs/nss-3.15.4[abi_x86_32(-)] ) app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)] ) || ( ( >=media-libs/fontconfig-2.10.92[abi_x86_32(-)] >=media-libs/freetype-2.5.0.1[abi_x86_32(-)] >=x11-libs/libX11-1.6.2[abi_x86_32(-)] >=x11-libs/libXcursor-1.1.14[abi_x86_32(-)] >=x11-libs/libXext-1.3.2[abi_x86_32(-)] >=x11-libs/libXrender-0.9.8[abi_x86_32(-)] >=x11-libs/libXt-1.1.4[abi_x86_32(-)] ) app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)] ) ) x86? ( dev-libs/atk dev-libs/glib:2 dev-libs/nspr dev-libs/nss kde? ( dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtsvg:4 kde-base/kdelibs x11-libs/libICE x11-libs/libSM x11-libs/libXau x11-libs/libXdmcp x11-libs/libXext x11-libs/libXft x11-libs/libXpm ) media-libs/fontconfig media-libs/freetype >=sys-libs/glibc-2.4 x11-libs/cairo x11-libs/gdk-pixbuf x11-libs/gtk+:2 x11-libs/libX11 x11-libs/libXcursor x11-libs/libXext x11-libs/libXrender x11-libs/libXt x11-libs/pango ) ) || ( media-fonts/liberation-fonts media-fonts/corefonts ) selinux? ( sec-policy/selinux-flash )
+REQUIRED_USE=sse2 debug? ( abi_x86_32 ) || ( abi_x86_64 abi_x86_32 )
+RESTRICT=strip mirror
+SLOT=0
+SRC_URI=abi_x86_32? ( !debug? ( http://fpdownload.macromedia.com/get/flashplayer/pdc/11.2.202.424/install_flash_player_11_linux.i386.tar.gz -> adobe-flash-11.2.202.424.i386.tar.gz ) debug? ( http://fpdownload.macromedia.com/pub/flashplayer/updaters/11/flashplayer_11_plugin_debug.i386.tar.gz -> adobe-flash-11.2.202.424-debug.i386.tar.gz ) ) abi_x86_64? ( http://fpdownload.macromedia.com/get/flashplayer/pdc/11.2.202.424/install_flash_player_11_linux.x86_64.tar.gz -> adobe-flash-11.2.202.424.x86_64.tar.gz )
+_eclasses_=eutils	6faef4c127028ccbba3a11400d24ae34	mozextension	ba6829881080a663d68531424a3dfbc6	multibuild	ddc59d206214ef1c240093e1bb2513cf	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multilib-build	9eb4b5fb858228316d8bb32ada51f6a5	multilib-minimal	5bbdc77877c1aa3c6bd89ca3f9196d11	multiprocessing	d7f2985a2c76c365ee20269db5261414	nsplugins	7ea51b2f6cbd5b36b9c0163cc3ee03a2	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=522497a7aa8d090c9116588135505ac5
