@@ -1,6 +1,12 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.277 2014/11/13 11:18:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.278 2014/11/25 21:52:22 jer Exp $
+
+*adobe-flash-11.2.202.424 (25 Nov 2014)
+
+  25 Nov 2014; Jeroen Roovers <jer@gentoo.org>
+  +adobe-flash-11.2.202.424.ebuild:
+  Version bump (bug #530692).
 
   13 Nov 2014; Jeroen Roovers <jer@gentoo.org>
   -adobe-flash-11.2.202.411.ebuild:
